--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-03-25 10:17+0000\n"
+"PO-Revision-Date: 2016-03-28 02:36+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -8689,11 +8689,11 @@ msgstr ""
 #: ../doc/manual/development/monaca_ide/version_control.rst:13
 msgid ""
 "Now Version Control is also available within Monaca Cloud IDE with user-"
-"friendly interface. There are many version control systems; however, "
-"currently Monaca Cloud IDE supports the integration of one of the most "
-"popular Git servers called `GitHub <https://github.com>`_. If you integrate "
-"your monaca project to your repository, you can simply manage your source "
-"code right away from Monaca Cloud IDE."
+"friendly interface. There are many version control systems; however, Monaca "
+"Cloud IDE supports the integration of one of the most popular Git service "
+"provider called `GitHub <https://github.com>`_. If you integrate your Monaca"
+" project to your repository, you can simply manage your source code right "
+"away from Monaca Cloud IDE."
 msgstr ""
 
 #: ../doc/manual/development/monaca_ide/version_control.rst:15
@@ -9018,8 +9018,8 @@ msgstr ""
 msgid ""
 "In order to see full history of your previous commits in remote repository, "
 "go to :menuselection:`Version Control --> Show Remote History`. You will be "
-"redirected to your current branch and a list of commit history will be "
-"displayed."
+"redirected to the remote Git service provider's website showing a commit "
+"history of your current branch."
 msgstr ""
 
 #: ../doc/manual/development/monaca_ide/version_control.rst:268
