[update] Fixed sample app page.

--- a/src/locale/sampleapp.pot
+++ b/src/locale/sampleapp.pot
@@ -1103,7 +1103,7 @@ msgid ":envvar:`InfoPageCtrl` controls the interactions and processes in :file:`
 msgstr ""
 
 #: ../doc/sampleapp/samples/index.rst:5
-msgid "Sample Apps"
+msgid "Sample Apps & Templates"
 msgstr ""
 
 #: ../doc/sampleapp/samples/inmobi.rst:5
