Updated for new Monaca CLI.

--- a/src/locale/quick_start.pot
+++ b/src/locale/quick_start.pot
@@ -631,7 +631,7 @@ msgid "Disable the local PC's firewall."
 msgstr ""
 
 #: ../doc/quick_start/cli/testing_debugging.rst:48
-msgid "In the command window, navigate to your project folder and type :ref:`monaca_livesync` command to connect to your Monaca Debugger. Then, Monaca CLI will wait for requests from debugger."
+msgid "In the command window, navigate to your project folder and type :ref:`monaca_debug` command to connect to your Monaca Debugger. Then, Monaca CLI will wait for requests from debugger."
 msgstr ""
 
 #: ../doc/quick_start/cli/testing_debugging.rst:56
