--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-05-17 11:47+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-05-18 00:23+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7233,7 +7233,7 @@ msgstr "インスト ( ネットワークインストール ) : Monaca デバッ
 msgid ""
 "click on the toggle menu on the top-left corner and go to :guilabel:`Local "
 "Computers` button."
-msgstr ""
+msgstr "左上端に表示された切り替えメニューをクリックして、次に、:guilabel:`ローカルコンピュータ` ボタンをクリックします。"
 
 #: ../doc/manual/development/monaca_cli/pairing_debugging.rst:68
 #: ../doc/manual/development/monaca_localkit/pairing_debugging.rst:52
