--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-06-21 12:52+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-06-22 03:12+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +50,7 @@ msgstr "ダッシュボード画面の表示"
 
 #: ../doc/onsenui/index.rst:30
 msgid "Go to Dashboard and click *Create Project*"
-msgstr ""
+msgstr "ダッシュボードへ移動して、*新規プロジェクトの作成* を選択します。"
 
 #: ../doc/onsenui/index.rst:36
 msgid "Choose one Onsen UI template that best fit your project type"
