--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-06-23 04:30+0000\n"
+"PO-Revision-Date: 2016-06-23 06:21+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -375,9 +375,14 @@ msgstr "2 種類のユーザーがいます。"
 
 #: ../doc/manual/backend/control_operations.rst:265
 msgid ""
-"1. Owner refers to the user who create the Collection. Owner will always be "
-"granted read and write permissions. 2 Public refers to all users who are not"
-" logged in. By default, they are not granted the read or write permissions."
+"Owner refers to the user who create the Collection. Owner will always be "
+"granted read and write permissions."
+msgstr ""
+
+#: ../doc/manual/backend/control_operations.rst:266
+msgid ""
+"Public refers to all users who are not logged in. By default, they are not "
+"granted the read or write permissions."
 msgstr ""
 
 #: ../doc/manual/backend/control_operations.rst:268
