--- a/src/locale/manual.pot
+++ b/src/locale/manual.pot
@@ -3462,7 +3462,7 @@ msgid "Your custom Cordova plugin need to follow the requirements below:"
 msgstr ""
 
 #: ../doc/manual/dependencies/custom_cordova_plugin.rst:21
-msgid "It must be compatible with Cordova 4.1."
+msgid "It should be compatible with Cordova 4.2 or higher."
 msgstr ""
 
 #: ../doc/manual/dependencies/custom_cordova_plugin.rst:22
